--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "survey-by-mail",
+  "name": "SurveyMailer",
   "version": "1.0.0",
   "main": "server.js",
   "author": "ADIL",
   "license": "MIT",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "server": "nodemon server.js"
   },
   "dependencies": {
+    "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.4",
+    "mongoose": "^5.4.4",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0"
   },
