--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
 		"dev": "concurrently -n \"server,client\" -p \"[{time}][{name}]\" -t \"HH:mm:ss\" \"yarn:server\" \"yarn:client\" --kill-others"
 	},
 	"dependencies": {
-    "concurrently": "^4.1.0",
+		"body-parser": "^1.18.3",
+		"concurrently": "^4.1.0",
 		"cookie-session": "^2.0.0-beta.3",
 		"express": "^4.16.4",
 		"mongoose": "^5.4.4",
 		"passport": "^0.4.0",
-		"passport-google-oauth20": "^1.0.0"
+		"passport-google-oauth20": "^1.0.0",
+		"stripe": "^6.22.0"
 	},
 	"engines": {
 		"node": "10.13.0",
