--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "SurveyMailer",
+	"name": "surveymailer",
 	"version": "1.0.0",
 	"main": "server.js",
 	"author": "ADIL",
@@ -8,7 +8,8 @@
 		"start": "node server.js",
 		"server": "nodemon server.js --ignore client/",
 		"client": "cd client && yarn start",
-		"dev": "concurrently -n \"server,client\" -p \"[{time}][{name}]\" -t \"HH:mm:ss\" \"yarn:server\" \"yarn:client\" --kill-others"
+		"dev": "concurrently -n \"server,client\" -p \"[{time}][{name}]\" -t \"HH:mm:ss\" \"yarn:server\" \"yarn:client\" --kill-others",
+		"heroku-postbuild": "cd client && yarn && yarn run build"
 	},
 	"dependencies": {
 		"body-parser": "^1.18.3",
